# nonebot-plugin-genshinuid

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/GenshinUID/: __init__.py  client.py  config.py  utils.py
src/GenshinUID/protocols/: __init__.py  onebot_v11.py
src/GenshinUID/sayu_protocol/: __init__.py  gs_client.py  pack.py
